# lois2

./: .gitignore  CMakeLists.txt  Unpossible.cpp  Unpossible.h  Validation.cpp  Validation.h  main.cpp
tests/: testUnpossible.cpp  testValidation.cpp
